--- a/public/css/css.css
+++ b/public/css/css.css
@@ -1,3 +1,11 @@
+/* MY FONTS */
+@font-face {
+  src: url(../fonts/Cairo-VariableFont_wght.ttf);
+  font-size: revert;
+  font-family:Cairo;
+ 
+}
+
 /* devanagari */
 @font-face {
   font-family: 'Poppins';
@@ -7,6 +15,7 @@
   unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
 }
 /* latin-ext */
+
 @font-face {
   font-family: 'Poppins';
   font-style: normal;
