--- a/public/assets/css/style.bundle.rtl.css
+++ b/public/assets/css/style.bundle.rtl.css
@@ -39851,7 +39851,7 @@ code:not([class*=language-]) {
 .table.table-row-bordered tr {
   border-bottom-width: 1px;
   border-bottom-style: solid;
-  border-bottom-color: #EFF2F5;
+  border-bottom-color: #dee2e7;
 }
 .table.table-row-bordered tfoot th, .table.table-row-bordered tfoot td {
   border-top-width: 1px !important;
@@ -40002,8 +40002,8 @@ code:not([class*=language-]) {
 }
 
 .table.gy-5 th, .table.gy-5 td {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
+  /* padding-top: 1.25rem; */
+  /* padding-bottom: 1.25rem; */
 }
 
 .table.gx-5 th, .table.gx-5 td {
